網頁設計好難 半夜或明天再繼續 這兩天先這樣了

--- a/網際網路資料庫程式設計/html/html_0_1.html
+++ b/網際網路資料庫程式設計/html/html_0_1.html
@@ -1,11 +1,13 @@
 <!--這是註解，不會顯示出來-->
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>     
-        <meta charset="UTF-8">
-        <title>一個最簡單的例子</title>　
-    </head>
-    <body>
-        網際網路資料庫程式設計
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>一個最簡單的例子</title>
+    　
+  </head>
+
+  <body>
+    網際網路資料庫程式設計
+  </body>
 </html>
