--- a/網際網路資料庫程式設計/html/圖片.html
+++ b/網際網路資料庫程式設計/html/圖片.html
@@ -1,7 +1,7 @@
 <!--正常顯示-->
-<img src="img/schl_mark.png" width="125" height="120" alt="彰化師大校徽">
+<img src="img/schl_mark.png" width="125" height="120" alt="彰化師大校徽" />
 
-<br><br>
+<br /><br />
 
 <!--圖片無法顯示-->
-<img src="schl_mark.png" width="125" height="120" alt="彰化師大校徽">
+<img src="schl_mark.png" width="125" height="120" alt="彰化師大校徽" />
