--- a/網際網路資料庫程式設計/html/文字樣式.html
+++ b/網際網路資料庫程式設計/html/文字樣式.html
@@ -5,6 +5,8 @@
 <h3>標題字體h3</h3>
 <h4>標題字體h4</h4>
 <h5>標題字體h5</h5>
-<h6>標題字體h6</h6> 
+<h6>標題字體h6</h6>
 
-第一行文字<br>第二行文字<hr><p>第三行文字</p>
+第一行文字<br />第二行文字
+<hr />
+<p>第三行文字</p>
